--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -24,5 +24,4 @@ jobs:
           conda config --show
           printenv | sort
       - shell: bash -l {0}
-        run: mamba install jupyterlab
-
+        run: conda mambabuild --no-anaconda-upload --python=3.10 pyarts
