--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    name: Build (${{ matrix.pyversion }}, ${{ matrix.os }})
+    name: Build (py${{ matrix.pyversion }}, ${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -31,6 +31,12 @@ jobs:
       - shell: bash -l {0}
         run: conda mambabuild --no-anaconda-upload --numpy=1.20 --python=${{ matrix.pyversion }} pyarts
       - uses: actions/upload-artifact@v3
+        if: runner.os == 'Linux'
         with:
-          name: pyarts-conda-package-${{ runner.os }}-${{ matrix.pyversion }}
+          name: pyarts-conda-package-${{ runner.os }}-py${{ matrix.pyversion }}
           path: /usr/share/miniconda/envs/pyarts-build/conda-bld/*/pyarts-*.tar.bz2
+      - uses: actions/upload-artifact@v3
+        if: runner.os == 'macOS'
+        with:
+          name: pyarts-conda-package-${{ runner.os }}-py${{ matrix.pyversion }}
+          path: /usr/local/miniconda/envs/pyarts-build/conda-bld/*/pyarts-*.tar.bz2
