--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest"]
-        pyversion: ["3.9", "3.10"]
+        pyversion: ["3.9", "3.10", "3.11"]
     steps:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
