--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -15,8 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.9
-          mamba-version: "*"
+          miniforge-version: latest
+          miniforge-variant: Mambaforge
           channels: conda-forge
           channel-priority: true
           activate-environment: pyarts-build
