--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pyarts" %}
-{% set version = "2.5.10" %}
+{% set version = "2.5.11git0" %}
 {% set dev_url = "https://github.com/atmtools/arts" %}
 
 package:
@@ -7,10 +7,10 @@ package:
   version: {{ version }}
 
 source:
-  url: {{ dev_url }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 19a70d978a8ac0b77d6248584ddaa50067597f4c3ee85fd71ef0dad8a76a89f8
-  # git_url: {{ dev_url }}.git
-  # git_depth: 1
+  #url: {{ dev_url }}/archive/refs/tags/v{{ version }}.tar.gz
+  #sha256: 19a70d978a8ac0b77d6248584ddaa50067597f4c3ee85fd71ef0dad8a76a89f8
+  git_url: {{ dev_url }}.git
+  git_depth: 1
 
 build:
   skip: True  # [win]
@@ -26,23 +26,19 @@ requirements:
     - cmake >=3.20
     - make                               # [unix]
     - {{ cdt('mesa-libgl-devel') }}  # [linux]
-    # - {{ cdt('mesa-libegl-devel') }}  # [linux]
-    # - {{ cdt('mesa-dri-drivers') }}  # [linux]
-    # - {{ cdt('libselinux') }}        # [linux]
-    # - {{ cdt('libxdamage') }}        # [linux]
-    # - {{ cdt('libxfixes') }}         # [linux]
-    # - {{ cdt('libxxf86vm') }}        # [linux]
   host:
     - python {{ python }}
+    - build
     - docutils
     - glew
     - glfw
     - lark-parser
     - libgomp         # [linux]
-    - libopenblas
+    - libopenblas     # [linux]
+    - libmicrohttpd
+    - llvm-openmp     # [osx]
     - matplotlib
     - netcdf4
-    - numpy >=1.20
     - pip
     - pytest
     - pytest-runner
@@ -54,10 +50,10 @@ requirements:
     - python
     - glew
     - glfw
-    - libopenblas
+    - libmicrohttpd
     - matplotlib
     - netcdf4
-    - numpy >=1.20
+    - {{ pin_compatible('numpy', lower_bound='1.22', upper_bound='3.0') }}
     - scipy
     - xarray
     - zlib
@@ -68,7 +64,8 @@ about:
   summary: 'The Atmospheric Radiative Transfer Simulator'
   description: |
       Python interface to ARTS
-  license: GPL-2.0-only
+  # License abbr. according to https://spdx.org/licenses/
+  license: GPL-3.0-or-later
   # It is required to include a license file in the package,
   # (even if the license doesn't require it) using the license_file entry.
   # Please also note that some projects have multiple license files which all need to be added using a valid yaml list.
