--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -29,7 +29,7 @@ jobs:
           conda config --show
           printenv | sort
       - shell: bash -l {0}
-        run: conda mambabuild --no-anaconda-upload --numpy=1.20 --python=${{ matrix.pyversion }} pyarts
+        run: conda mambabuild --no-anaconda-upload --python=${{ matrix.pyversion }} pyarts
       - uses: actions/upload-artifact@v3
         if: runner.os == 'Linux'
         with:
