--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -32,10 +32,10 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: runner.os == 'Linux'
         with:
-          name: pyarts-conda-package-${{ runner.os }}-py${{ matrix.pyversion }}
+          name: pyarts-conda-package-${{ matrix.os }}-py${{ matrix.pyversion }}
           path: /home/runner/miniconda3/envs/pyarts-build/conda-bld/*/pyarts-*.tar.bz2
       - uses: actions/upload-artifact@v4
         if: runner.os == 'macOS'
         with:
-          name: pyarts-conda-package-${{ runner.os }}-py${{ matrix.pyversion }}
+          name: pyarts-conda-package-${{ matrix.os }}-py${{ matrix.pyversion }}
           path: /Users/runner/miniconda3/envs/pyarts-build/conda-bld/*/pyarts-*.tar.bz2
