--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macos-latest", "macos-14"]
+        os: ["ubuntu-latest", "macos-latest", "macos-14", "windows-latest"]
         pyversion: ["3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v4
@@ -39,3 +39,8 @@ jobs:
         with:
           name: pyarts-conda-package-${{ matrix.os }}-py${{ matrix.pyversion }}
           path: /Users/runner/miniconda3/envs/pyarts-build/conda-bld/*/pyarts-*.tar.bz2
+      - uses: actions/upload-artifact@v4
+        if: runner.os == 'Windows'
+        with:
+          name: pyarts-conda-package-${{ matrix.os }}-py${{ matrix.pyversion }}
+          path: C:/Users/runneradmin/miniconda3/envs/pyarts-build/conda-bld/win-64/pyarts-*.tar.bz2
