--- a/pyarts/conda_build_config.yaml
+++ b/pyarts/conda_build_config.yaml
@@ -2,10 +2,14 @@ python:
   - 3.10
   - 3.11
   - 3.12
-c_compiler_version: # [osx]
-  - 16 # [osx]
-cxx_compiler_version: # [osx]
-  - 16 # [osx]
+c_compiler_version:  # [osx]
+  - 16               # [osx]
+cxx_compiler_version:  # [osx]
+  - 16                 # [osx]
+c_compiler:  # [win]
+  - vs2022   # [win]
+target_platform:  # [win]
+  - win-64        # [win]
 MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
   - "11.0"                 # [osx and x86_64]
 MACOSX_SDK_VERSION:        # [osx and x86_64]
