--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -33,10 +33,10 @@ requirements:
     - glfw
     - lark-parser
     - libgomp         # [linux]
-    - libopenblas     # [linux]
     - llvm-openmp     # [osx]
     - matplotlib
     - netcdf4
+    - openblas        # [linux or win]
     - pip
     - pybind11
     - pytest
@@ -49,9 +49,12 @@ requirements:
     - python
     - glew
     - glfw
+    - lark-parser
+    - libgomp         # [linux]
     - matplotlib
     - netcdf4
     - {{ pin_compatible('numpy', lower_bound='1.22', upper_bound='3.0') }}
+    - openblas        # [linux or win]
     - scipy
     - xarray
     - zlib
