--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -27,14 +27,17 @@ requirements:
     - {{ cdt('mesa-libgl-devel') }}  # [linux]
   host:
     - python {{ python }}
+    - boost
     - build
     - docutils
+    - eigen
     - glew
     - glfw
     - lark-parser
     - libgomp         # [linux]
     - llvm-openmp     # [osx]
     - matplotlib
+    - nanobind
     - netcdf4
     - openblas        # [linux or win]
     - pip
@@ -53,7 +56,7 @@ requirements:
     - libgomp         # [linux]
     - matplotlib
     - netcdf4
-    - {{ pin_compatible('numpy', lower_bound='1.22', upper_bound='3.0') }}
+    - {{ pin_compatible('numpy', lower_bound='2.0', upper_bound='3.0') }}
     - openblas        # [linux or win]
     - scipy
     - xarray
