--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -27,35 +27,37 @@ requirements:
     - {{ cdt('mesa-libgl-devel') }}  # [linux]
   host:
     - python {{ python }}
-    - build
+    - boost
     - docutils
-    - glew
-    - glfw
+    - eigen
     - lark-parser
     - libgomp         # [linux]
     - llvm-openmp     # [osx]
     - matplotlib
+    - nanobind
     - netcdf4
     - openblas        # [linux or win]
     - pip
-    - pybind11
     - pytest
     - pytest-runner
+    - python-build
+    - requests
     - scipy
+    - typing_extensions
     - xarray
     - zlib
   run:
     - __osx >={{ MACOSX_DEPLOYMENT_TARGET|default("10.15") }}  # [osx and x86_64]
     - python
-    - glew
-    - glfw
     - lark-parser
     - libgomp         # [linux]
     - matplotlib
     - netcdf4
-    - {{ pin_compatible('numpy', lower_bound='1.22', upper_bound='3.0') }}
+    - {{ pin_compatible('numpy', lower_bound='2.0', upper_bound='3.0') }}
     - openblas        # [linux or win]
+    - requests
     - scipy
+    - typing_extensions
     - xarray
     - zlib
 
