--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   skip: True  # [win]
-  number: 0
+  number: 1
 
 requirements:
   build:
@@ -33,10 +33,11 @@ requirements:
     - glfw
     - lark-parser
     - libgomp         # [linux]
-    - libopenblas     # [linux]
+    - libblas=*=*openblas*  # [linux]
     - libmicrohttpd
     - llvm-openmp     # [osx]
     - matplotlib
+    - nomkl  # [linux]
     - netcdf4
     - pip
     - pytest
@@ -51,6 +52,7 @@ requirements:
     - glew
     - glfw
     - libmicrohttpd
+    - libopenblas  # [linux]
     - matplotlib
     - netcdf4
     - {{ pin_compatible('numpy', lower_bound='1.22', upper_bound='3.0') }}
