--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -36,7 +36,7 @@ requirements:
     - matplotlib
     - nanobind
     - netcdf4
-    - openblas        # [linux or win]
+    - openblas=*=*openmp*        # [linux or win]
     - pip
     - pytest
     - pytest-runner
@@ -54,7 +54,7 @@ requirements:
     - matplotlib
     - netcdf4
     - {{ pin_compatible('numpy', lower_bound='2.0', upper_bound='3.0') }}
-    - openblas        # [linux or win]
+    - libopenblas=*=*openmp*        # [linux or win]
     - requests
     - scipy
     - typing_extensions
