--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -38,7 +38,8 @@ requirements:
     - nanobind
     - netcdf4
     - numpy>=2
-    - openblas=*=*openmp*        # [linux or win]
+    - openblas=*=*openmp*  # [linux]
+    - openblas             # [win]
     - pip
     - pytest
     - pytest-runner
@@ -57,7 +58,8 @@ requirements:
     - matplotlib
     - netcdf4
     - {{ pin_compatible('numpy', lower_bound='2.0', upper_bound='3.0') }}
-    - libopenblas=*=*openmp*        # [linux or win]
+    - libopenblas=*=*openmp*  # [linux]
+    - libopenblas             # [win]
     - requests
     - scipy
     - typing_extensions
