Add nomkl on linux

--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -37,6 +37,7 @@ requirements:
     - matplotlib
     - nanobind
     - netcdf4
+    - nomkl  # [linux]
     - numpy>=2
     - openblas=*=*openmp*  # [linux]
     - openblas             # [win]
