--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "macos-13", "windows-latest"]
-        pyversion: ["3.10", "3.11", "3.12"]
+        pyversion: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
       - uses: conda-incubator/setup-miniconda@v3
