--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "pyarts" %}
-{% set version = "3.0.0.dev1" %}
+{% set version = "3.0.0dev2" %}
 {% set dev_url = "https://github.com/atmtools/arts" %}
 
 package:
@@ -7,13 +7,13 @@ package:
   version: {{ version }}
 
 source:
-  # url: {{ dev_url }}/archive/refs/tags/v{{ version }}.tar.gz
-  # sha256: 8ae831678b282c96a19f4fbc1f387b1fd6e6b7289485121c1b904e2148ad9da7
-  git_url: {{ dev_url }}.git
+  url: {{ dev_url }}/archive/refs/tags/v{{ version }}.tar.gz
+  sha256: 225986f69c1e04ffd79f8b5d5920520b24cb13a2eec477b28059f55445c6e79a
+  # git_url: {{ dev_url }}.git
   git_depth: 1
 
 build:
-  number: 2
+  number: 0
 
 requirements:
   build:
@@ -47,6 +47,7 @@ requirements:
     - python-build
     - requests
     - scipy
+    - tqdm
     - typing_extensions
     - xarray
     - zlib
@@ -63,6 +64,7 @@ requirements:
     - libopenblas             # [win]
     - requests
     - scipy
+    - tqdm
     - typing_extensions
     - xarray
     - zlib
