--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-version: latest
+          channels: conda-forge
+          conda-remove-defaults: "true"
           activate-environment: pyarts-build
           environment-file: etc/environment-pyarts-build.yml
       - shell: bash -l {0}
