--- a/pyarts/conda_build_config.yaml
+++ b/pyarts/conda_build_config.yaml
@@ -6,6 +6,10 @@ c_compiler:  # [win]
   - vs2022   # [win]
 target_platform:  # [win]
   - win-64        # [win]
+c_compiler_version:  # [osx]
+  - 19               # [osx]
+cxx_compiler_version:  # [osx]
+  - 19                 # [osx]
 MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
   - "13.5"                 # [osx and x86_64]
 MACOSX_SDK_VERSION:        # [osx and x86_64]
