Build dev version

--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pyarts" %}
-{% set version = "3.0.0dev3" %}
-{% set dev_url = "https://github.com/atmtools/arts" %}
+{% set version = "3.0.0dev4" %}
+{% set dev_url = "https://github.com/olemke/arts" %}
 
 package:
   name: {{ name|lower }}
@@ -10,7 +10,8 @@ source:
   # url: {{ dev_url }}/archive/refs/tags/v{{ version }}.tar.gz
   # sha256: 225986f69c1e04ffd79f8b5d5920520b24cb13a2eec477b28059f55445c6e79a
   git_url: {{ dev_url }}.git
-  git_depth: 1
+  git_rev: bump-version
+  # git_depth: 1
 
 build:
   number: 0
