Install libgl-devel instead of cdt mesa package
The CDT package breaks system header files (e.g. ::timespec not
available in ctime)

--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -25,13 +25,13 @@ requirements:
     - {{ compiler('fortran') }}
     - cmake >=3.20
     - make                               # [unix]
-    - {{ cdt('mesa-libgl-devel') }}  # [linux]
   host:
     - python {{ python }}
     - docutils
     - glew
     - glfw
     - lark-parser
+    - libgl-devel     # [linux]
     - libgomp         # [linux]
     - libmicrohttpd
     - llvm-openmp     # [osx]
