--- a/pyarts/conda_build_config.yaml
+++ b/pyarts/conda_build_config.yaml
@@ -5,6 +5,8 @@ python:
   - 3.13
 c_compiler:  # [win]
   - vs2022   # [win]
+cxx_compiler:  # [win]
+  - vs2022     # [win]
 target_platform:  # [win]
   - win-64        # [win]
 c_compiler_version:  # [osx]
