Fix msvc compiler

--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -13,6 +13,7 @@ jobs:
         pyversion: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
+      - uses: ilammy/msvc-dev-cmd@v1
       - uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-version: latest
