--- a/pyarts/conda_build_config.yaml
+++ b/pyarts/conda_build_config.yaml
@@ -3,13 +3,16 @@ python:
   - 3.11
   - 3.12
   - 3.13
-c_compiler_version:  # [linux or osx]
+c_stdlib:
+  - sysroot  # [linux]
+  - macosx_deployment_target  # [osx]
+c_compiler_version:
   - 14               # [linux]
   - 19               # [osx]
-cxx_compiler_version:  # [linux or osx]
+cxx_compiler_version:
   - 14                 # [linux]
   - 19                 # [osx]
-MACOSX_DEPLOYMENT_TARGET:  # [osx and x86_64]
-  - "11.0"                 # [osx and x86_64]
-MACOSX_SDK_VERSION:        # [osx and x86_64]
-  - "11.0"                 # [osx and x86_64]
+c_stdlib_version:  # [osx]
+  - "11.0"         # [osx]
+MACOSX_SDK_VERSION:        # [osx]
+  - "11.0"                 # [osx]
