--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -1,16 +1,16 @@
 {% set name = "pyarts" %}
 {% set version = "2.6.16" %}
-{% set dev_url = "https://github.com/olemke/arts" %}
+{% set dev_url = "https://github.com/atmtools/arts" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  # url: {{ dev_url }}/archive/refs/tags/v{{ version }}.tar.gz
-  # sha256: 511ea89ed24e95cceb74e473a29de5b0f922f47898987a767c6789078dcb803b
-  git_url: {{ dev_url }}.git
-  git_rev: arts26-bump-version
+  url: {{ dev_url }}/archive/refs/tags/v{{ version }}.tar.gz
+  sha256: 411a70dd52a4a8d610a4b54a8ead446077e90586c01b7ae08f3ff0b3243016e5
+  # git_url: {{ dev_url }}.git
+  # git_rev: arts26-bump-version
 
 build:
   skip: True  # [win]
