--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -1,4 +1,4 @@
-{% set name = "pyarts" %}
+{% set name = "pyarts3" %}
 {% set version = "3.0.0dev7" %}
 {% set dev_url = "https://github.com/atmtools/arts" %}
 
