--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -39,6 +39,7 @@ requirements:
     - matplotlib
     - nomkl  # [linux]
     - netcdf4
+    - libnetcdf=4.9.3
     - openblas=*=*openmp*  # [linux]
     - pip
     - pytest
@@ -57,6 +58,7 @@ requirements:
     - libopenblas=*=*openmp*  # [linux]
     - matplotlib
     - netcdf4
+    - libnetcdf=4.9.3
     - {{ pin_compatible('numpy', lower_bound='1.22', upper_bound='3.0') }}
     - scipy
     - tqdm
