--- a/.github/workflows/conda-build.yml
+++ b/.github/workflows/conda-build.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-latest", "macos-13", "macos-latest"]
+        os: ["ubuntu-latest", "macos-15-intel", "macos-latest"]
         pyversion: ["3.10", "3.11", "3.12", "3.13"]
     steps:
       - uses: actions/checkout@v4
