--- a/pyarts/meta.yaml
+++ b/pyarts/meta.yaml
@@ -38,7 +38,7 @@ requirements:
     - llvm-openmp     # [osx]
     - llvm-openmp<21  # [windows]
     - matplotlib
-    - nanobind<2.5.0
+    - nanobind
     - netcdf4
     - nomkl  # [linux]
     - numpy>=2
@@ -61,7 +61,6 @@ requirements:
     - lark-parser
     - libgomp         # [linux]
     - matplotlib
-    - netcdf4
     - {{ pin_compatible('numpy', lower_bound='2.0', upper_bound='3.0') }}
     - libopenblas=*=*openmp*  # [linux]
     - libopenblas             # [win]
